# Sonix

./: .gitignore  CMakeLists.txt  README  README.md
.cache/clangd/index/: main.c.45BFFA88A13A9662.idx  portaudio.h.CC5A3EA467F07C6D.idx  (+3 more)
App/: main.qml  main.qrc
App/build-SAP-Desktop-Debug/: Makefile  cmake_install.cmake
App/lib/: libsonic.so.0.3.0
App/src/: Book.cpp  Book.h  Player.cpp  Player.h  cope.c  cope.cpp  main.cpp
Authenticator/: main.py
Curses/: CMakeLists.txt  README  sap
Curses/cmake/: SndFileConfig.cmake
Curses/src/: Player.h  cope.c  main.c
Desktop/: CMakeLists.txt  CMakeLists.txt-SAP  a.out  sap
Desktop/.cache/clangd/index/: AudioPlayer.hpp.EBB4075C1C400297.idx  Book.cpp.3BF7A91115301050.idx  Book.h.570A7F072D66B279.idx  Book.hpp.F8C601BE229802CB.idx  PlayerWindow.cpp.D56FE94AEBD7169E.idx  PlayerWindow.h.1ABE2A8D4FC21505.idx  PlayerWindow.hpp.EE2C2A46CD206B07.idx  SampleProvider.cpp.320322A2C2B30CDE.idx  argparse.hpp.2B946C1091B4F2E6.idx  cope.cpp.57E1F9833297C292.idx  cope.h.49308D50D3BCCD19.idx  cope.hpp.F482EDF18BED9F1A.idx  defs.h.3611D1132DF8CA8C.idx  main.cpp.9DA5A6A39A996B3C.idx  portaudio.h.2D2440A6F82CA32E.idx  sonic.c.11B401A5187BFFED.idx  sonic.h.906BCCC392400FA0.idx
Desktop/cmake/: FindLibAO.cmake  FindLibAVFormat.cmake  FindSndFile.cmake.bak
Desktop/lib/: libsndfile.so.1.0.32.bak
Desktop/src/: AudioPlayer.cpp  AudioPlayer.hpp  Book.cpp  Book.h  Book.hpp  PlayerWindow.cpp  PlayerWindow.h  PlayerWindow.hpp  PlayerWindow.ui  SampleProvider.hpp  cope.cpp  cope.h  cope.hpp  defs.h  main.cpp  sonic.c  sonic.h
Embedded/: CMakeLists.txt  debug.sh
Embedded/.cache/clangd/index/: BluetoothMenu.cpp.0900C398AC8E922C.idx  Book.cpp.6D44C7C0B30CDE4B.idx  Book.h.826CF684ED2B3FF1.idx  DEV_Config.c.ED885A3CA6BABA49.idx  DEV_Config.h.C6DE1286C2FB82C4.idx  Debug.h.07233EE067D67642.idx  FileMenu.cpp.D3CE38A07BFDA602.idx  GUI_BMP.c.544CDCAFF39A1BC8.idx  GUI_BMP.h.2795B6934B3B0A2C.idx  GUI_Paint.c.C22B8C7D4C5720B1.idx  GUI_Paint.h.E4C679DB2360EDBA.idx  LCD_1in3.c.98AA67E913F0E47F.idx  LCD_1in3.h.C5A26B569A4E8476.idx  Menu.h.9363D4FB91EB1555.idx  Player.cpp.FD44D0D0E55AB610.idx  Player.h.1EE551B8BD084716.idx  PlayerMenu.cpp.7656A0E0941FC7E1.idx  Settings.cpp.6DF08F038EB7FFA3.idx  SettingsMenu.cpp.ADC5888D4841DE81.idx  cope.c.96EFB494B18873F8.idx  cope.cpp.4A67C3EA7616FD81.idx  cope.h.27C1B9018D38BCF5.idx  dev_hardware_SPI.c.177B81062951EF01.idx  dev_hardware_SPI.h.0B4443B3C2729632.idx  font12.c.A14B7B8358B189CF.idx  font12CN.c.5588343C93265DF8.idx  font16.c.D4BA3A663C4836A8.idx  font20.c.C2AE3838E395A935.idx  font24.c.E7746C5EA20AC082.idx  font24CN.c.C85CB5A9E41D2460.idx  font8.c.4C52AE10AA683572.idx  fonts.h.FBCBF837965C29D3.idx  main.c.19D99B0949F451BF.idx  main.cpp.F2A8E84DF9A74B67.idx  portaudio.h.0BD1C850E15757DA.idx  sndfile.h.3D94434BC3051DCE.idx  sonic.h.07DFB9F49A93D486.idx  sysfs_gpio.c.FB41D62232263C04.idx  sysfs_gpio.h.2AB5624B6F9530D3.idx
Embedded/src/: BluetoothMenu.cpp  Book.cpp  Book.h  DEV_Config.c  DEV_Config.h  FileMenu.cpp  GUI_Paint.h  Menu.h  Player.cpp  Player.h  PlayerMenu.cpp  Settings.h  SettingsMenu.cpp  cope.cpp  cope.h  dev_hardware_SPI.c  main.cpp
Minimal/: CMakeLists.txt  sap
Minimal/.cache/clangd/index/: main.c.C68C58F931C89879.idx  portaudio.h.DC5B1657A16BAA92.idx  sndfile.h.1C57923096D760A4.idx  sonic.c.10D54A963DE22A9F.idx  sonic.h.E04AD70218605712.idx
Minimal/src/: SampleProvider.hpp  audiooutput-main.cpp  audiooutput.cpp  audiooutput.h  cope.hpp  main.c.bak  main.cpp  sonic.c
Python/: basiclibtest.py  libsonic.so.0.3.0  main.c  main.py  pyaudioExample.py
Qml/: CMakeLists.txt
Qml/.cache/clangd/index/: AudioPlayer.cpp.3C6640C66F9E94F3.idx  AudioPlayer.cpp.F3F23816502DEE21.idx  AudioPlayer.hpp.A839C59F716F3690.idx  Book.cpp.B9566E223882FA2A.idx  Book.h.570A7F072D66B279.idx  Book.hpp.BF7182EEC5532BAE.idx  CoverProvider.cpp.2AB955030D179855.idx  CoverProvider.hpp.924A925C8C0405DB.idx  Global.hpp.21478139DCDCDEF3.idx  PlayerWindow.cpp.8DA43031D091180A.idx  PlayerWindow.cpp.D56FE94AEBD7169E.idx  PlayerWindow.hpp.6552E9364498E56A.idx  SampleProvider.hpp.1EE02BA21CB891F9.idx  cope.hpp.CA23472D6F9BD511.idx  cope.hpp.F482EDF18BED9F1A.idx  main.cpp.9DA5A6A39A996B3C.idx  main.cpp.E72694DE2DBA447B.idx  sndfile.h.107CDC93A5AB9ED8.idx  sonic.c.11B401A5187BFFED.idx  sonic.c.C459BA3615916431.idx  sonic.h.A03E5B1BF65141AC.idx
Qml/cmake/: FFmpeg.cmake  FindCairo.cmake  FindFFmpeg.cmake  FindLibAVCodec.cmake  FindLibSndFile.cmake  Findx264.cmake
Qml/ffmpeg/: config.h
Qml/ffmpeg/fftools/: cmdutils.c  cmdutils.h  ffmpeg-main.cpp  ffmpeg.c  ffmpeg.hpp  ffmpeg_filter.c  ffmpeg_hw.c  ffmpeg_opt.c
Qml/ffmpeg/libavformat/: avformat.h
Qml/ffmpeg/libavutil/: avutil.h
Qml/lib/: libavdevice.so.58.13.100  libavformat.so.58.76.100  libavresample.so.4.0.0  libavutil.so.56.70.100
Qml/src/: AudioPlayer.cpp  AudioPlayer.hpp  Book.cpp  Book.hpp  CoverProvider.cpp  CoverProvider.hpp  Global.cpp  Global.hpp  PlayerWindow.cpp  PlayerWindow.hpp  SampleProvider.cpp  cmdutils.c  cope.hpp  ffmpeg-main.cpp  ffmpeg.c  ffmpeg.hpp  ffmpegLiason.cpp  ffmpegLiason.hpp  ffmpeg_filter.c  ffmpeg_hw.c  ffmpeg_opt.c  main.cpp  messages.hpp
Qml/ui/: player.qml
Server/: CMakeLists.txt  sap
Server/src/: frontEnd.py  main.cpp  ncursesExample.c  wave.h
Server/src2/: dummyClient.py  server.py
app/: CMakeLists.txt
app/build-SAP-Desktop-Debug/: CMakeCache.txt
app/build-SAP-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-98ef17d36fa921d0c848.json  target-SonicPlaceholder-Debug-10d1a6d4596f938b2e16.json
app/build-SAP-Desktop-Debug/.cmake/api/v1/reply.prev/: index-2021-07-13T01-14-05-0011.json  target-SonicPlaceholder_autogen-Debug-5b78230555389e06201c.json
app/build-SAP-Desktop-Debug/SonicPlaceholder_autogen/UVLADIE3JM/: moc_Book.cpp.d
app/lib/: libsndfile.so.1.0.32
app/src/: Book.h  cope.c  cope.cpp  cope.h
build-Desktop-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-Desktop-Desktop-Debug/sap_autogen/: moc_predefs.h  mocs_compilation.cpp
cmake/: SndFileTargets.cmake
src/: main.c
(+30 files in other folders)
